# docs/api/openapi3.json
@@ -113,8 +113,7 @@
           }
         },
         "required": [
-          "name",
-          "providerID"
+          "name"
         ]
       },
       "CreateTokenResponse": {
@@ -1929,6 +1928,13 @@
             "schema": {
               "type": "string"
             }
+          },
+          {
+            "in": "query",
+            "name": "showInactive",
+            "schema": {
+              "type": "boolean"
+            }
           }
         ],
         "responses": {
@@ -2013,6 +2019,12 @@
                     "type": "string"
                   },
                   "name": {
+                    "type": "string"
+                  },
+                  "providerID": {
+                    "example": "4yJ3n3D8E2",
+                    "format": "uid",
+                    "pattern": "[\\da-zA-HJ-NP-Z]{1,11}",
                     "type": "string"
                   }
                 },
